[tool.poetry]
name = "pgutils"
version = "0.1.0"
description = "Helper classes and functions for developing games with pygame."
authors = ["Joe Paton"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.6.0"
numpy = [
    {version = "2.0", python = ">=3.9, <3.10"},
    {version = "2.1", python = ">=3.10"}
]

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
